<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTituloApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:text="@string/txt_titulo"
                android:textSize="18sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="48dp"
                android:src="@mipmap/ic_launcher_round"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <EditText
                android:id="@+id/editGasolina"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="48dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_gasolina"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editEtanol"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_etanol"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                tools:ignore="Autofill" />
        </LinearLayout>
            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_calculate" />
        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_resultado"
            android:textSize="16sp"
            android:textStyle="bold" />

            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_clear" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:enabled="false"
                android:text="@string/btn_save" />

        <Button
            android:id="@+id/btnFinalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_end"
            tools:layout_editor_absoluteX="16dp" />


    </LinearLayout>
</ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>